fixed footer to align with body text

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,11 @@
 }
 
 .panel-big-body {
-padding: 120px;
+  padding: 120px;
+}
+
+.panel-default {
+  border: none;
 }
 
 img {
